se agrego la tabla de recetas

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,6 +25,14 @@
           <i class="fa-solid fa-boxes-stacked"></i>
           Inventario
         </a>
+        <a mat-list-item routerLinkActive="active" routerLink="/materiaPrima">
+          <i class="fa-solid fa-industry"></i>
+          Materia prima
+        </a>
+        <a mat-list-item routerLinkActive="active" routerLink="/receta">
+          <i class="fa-solid fa-book"></i>
+          Recetas
+        </a>
         <a mat-list-item routerLinkActive="active" routerLink="/compras">
           <i class="fa-solid fa-cart-shopping"></i>
           Compras
