--- a/src/app/modulos/receta/receta/receta.component.html
+++ b/src/app/modulos/receta/receta/receta.component.html
@@ -1,1 +1,36 @@
-<p>receta works!</p>
+<div class="contenedor-principal">
+
+
+  <h1 class="text-center" style="font-size: 48px;">Gestión de Recetas</h1>
+  <br>
+  <a class="btn btn-warning"><i class="fa-solid fa-plus"></i> Nueva receta</a>
+  <br>
+  <br>
+  <div class="card">
+    <h3 class="card-header" style="background-color: blue; color: white;">Recetas</h3>
+    <div class="card-body">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Materia Prima</th>
+            <th>Producto</th>
+            <th>Cantidad req.</th>
+            <th colspan="2">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Tela</td>
+            <td>Cojin</td>
+            <td>4m</td>
+            <td><button class="btn btn-warning"><i class="fa-solid fa-pen"></i> Editar</button></td>
+            <td><button class="btn btn-danger"><i class="fa-solid fa-trash"></i> Eliminar</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
