--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -30,7 +30,7 @@
           Materia prima
         </a>
         <a mat-list-item routerLinkActive="active" routerLink="/receta">
-          <i class="fa-solid fa-book"></i>
+          <i class="fa-solid fa-book"></i>|
           Recetas
         </a>
         <a mat-list-item routerLinkActive="active" routerLink="/compras">
