--- a/src/app/modulos/venta/venta/venta.component.html
+++ b/src/app/modulos/venta/venta/venta.component.html
@@ -26,13 +26,13 @@
     <div class="modal-dialog modal-lg"> <!-- Clase "modal-lg" para tamaño grande -->
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="productoVerLabel">Ventana Modal de Bootstrap</h5>
+          <h5 class="modal-title" id="productoVerLabel">Producto</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <p>Aquí puedes agregar el contenido que desees para la ventana modal.</p>
+          <p>Aqui iria una cosa de productos</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
