Avance en recetas, proveedores y otros componentes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;">
-  <img src="https://lumiere-a.akamaihd.net/v1/images/dua_lipa_portada_5_bf1628a4.jpeg?region=15,0,1956,1100&width=768" class="card-img-top" alt="...">
+  <img src="https://ss356.liverpool.com.mx/xl/1094691580.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Dua lipa</h5>
     <p class="card-text">
@@ -8,3 +8,7 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
+
+<br>
+
+<img src="../img/logo_luxuryRest.jpg" alt="">
