--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,6 +4,7 @@
       <button (click)="cajon.toggle()" mat-icon-button>
         <mat-icon>menu</mat-icon>
       </button>
+      <img src="../img/logo_luxuryRest.jpg" style="width: 64px; height: 64px;" title="Luxury Rest">
       <span>
         Luxury Rest
       </span>
