--- a/src/app/modulos/login/registro/registro.component.html
+++ b/src/app/modulos/login/registro/registro.component.html
@@ -25,7 +25,7 @@
           <button class="btn btn-primary" type="submit" style="border-radius: 15px;">Registrarse</button>
         </div>
         <div class="col-4">
-          <button class="btn btn-danger" type="submit" style="border-radius: 15px;">Cancelar</button>
+          <a class="btn btn-danger" style="border-radius: 15px;" routerLink="../">Cancelar</a>
         </div>
     </form>
   </div>
