--- a/src/app/modulos/proveedor/proveedor/proveedor.component.html
+++ b/src/app/modulos/proveedor/proveedor/proveedor.component.html
@@ -1,17 +1,53 @@
-<label for="Id_Proveedor" class="form-label">Id Proveedor:</label>
-<input type="number" id="Id_Proveedor" name="Id_Proveedor" class="form-control"><br>
+<div class="contenedorPrincipal">
 
-<label for="Nombre_Empresa" class="form-label">Nombre Empresa:</label>
-<input type="text" id="Nombre_Empresa" name="Nombre_Empresa" class="form-control"><br>
 
-<label for="Nombre_contacto" class="form-label">Nombre contacto:</label>
-<input type="text" id="Nombre_contacto" name="Nombre_contacto" class="form-control"><br>
+  <h1 class="titulo">Proveedores</h1>
+  <br>
 
-<label for="correo_electronico" class="form-label">Correo electronico:</label>
-<input type="email" id="correo_electronico" name="correo_electronico" class="form-control"><br>
+  <a class="btn btn-warning" id="botonAgregar" routerLink="agregarProveedor"><i class="fa-solid fa-plus"></i> Agregar proveedor </a>
+  <br>
+  <br>
 
-<label for="telefono" class="form-label">Teléfono:</label>
-<input type="text" id="telefono" name="telefono" class="form-control"><br>
+  <div class="card">
+    <h4 class="card-header">Proveedores</h4>
+    <br>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-3">
+          <b>Filtrar por: </b>
+          <input type="text" class="form-control" name="filtroProv">
+        </div>
+      </div>
+      <br>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Nombre Empresa</th>
+            <th>Nombre Contacto</th>
+            <th>Correo</th>
+            <th>Teléfono</th>
+            <th>Dirección</th>
+            <th colspan="2">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Textiles León</td>
+            <td>Armando Guzmán</td>
+            <td>armandoguz@texleon.mx</td>
+            <td>477-254-1265</td>
+            <td>Panchito flores #123</td>
+            <td><a class="btn btn-warning" routerLink="editarProveedor"><i class="fa-solid fa-pen"></i> Editar</a></td>
+            <td><button class="btn btn-danger"><i class="fa-solid fa-trash"></i> Eliminar</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-<label for="direccion" class="form-label">Dirección:</label>
-<input type="text" id="direccion" name="direccion" class="form-control"><br>
+
+
+
+</div>
