--- a/src/app/modulos/venta/venta/venta.component.html
+++ b/src/app/modulos/venta/venta/venta.component.html
@@ -4,7 +4,8 @@
 
     <div class="col-3" style="border-radius: 16px;" *ngFor="let i of [].constructor(productos); let index = index">
       <div class="card">
-        <img src="https://lumiere-a.akamaihd.net/v1/images/dua_lipa_portada_5_bf1628a4.jpeg?region=15,0,1956,1100&width=768" class="card-img-top" alt="producto">
+        <!-- https://lumiere-a.akamaihd.net/v1/images/dua_lipa_portada_5_bf1628a4.jpeg?region=15,0,1956,1100&width=768 -->
+        <img src="https://ss356.liverpool.com.mx/xl/1094691580.jpg" class="card-img-top" alt="producto">
         <div class="card-body">
           <h4 class="card-title" style="font-weight: 500;">Nombre del producto {{index + 1}}</h4>
           <p class="card-text">Valoracion del producto</p>
@@ -12,7 +13,7 @@
           <p class="card-text" style="color: rgb(95, 95, 95);">Cantidad disponible: <b>15</b></p>
           <div class="row row-cols-1 g-3">
             <button type="button" data-toggle="modal" data-target="#productoVer" class="btn col" style="border-radius: 16px; background-color: #6ea1ca;">Ver</button>
-            <a href="" class="btn btn-primary col" style="border-radius: 16px;">Agregar a carrito</a>
+            <a href="" class="btn btn-primary col" style="border-radius: 16px;"><i class="fa-solid fa-cart-plus"></i> Agregar a carrito</a>
           </div>
         </div>
       </div>
