Compras, finanzas y menu de modificaron y agregaron nuevas cosas

--- a/src/app/modulos/receta/agregar-receta/agregar-receta.component.html
+++ b/src/app/modulos/receta/agregar-receta/agregar-receta.component.html
@@ -36,7 +36,7 @@
 
       <div class="col-4">
         <label for="cantReq" class="form-label">Cantidad requerida: </label>
-        <input type="number" id="cantReq" name="cantReq" class="form-control" style="border-radius: 16px;" min="1">
+        <input type="number" id="cantReq" name="cantReq" class="form-control" style="border-radius: 16px;" min="1" placeholder="pz">
       </div>
 
       <div class="col-12">
