--- a/src/app/modulos/receta/editar-receta/editar-receta.component.html
+++ b/src/app/modulos/receta/editar-receta/editar-receta.component.html
@@ -2,7 +2,7 @@
 
 
   <a class="btn btn-danger" routerLink="../" style="border-radius: 16px;"><i class="fa-solid fa-arrow-right fa-rotate-180"></i> Regresar</a>
-  <h1 class="titulo">Nueva receta</h1>
+  <h1 class="titulo">Editar receta</h1>
 
   <br>
   <br>
