--- a/src/app/modulos/compra/compra/compra.component.html
+++ b/src/app/modulos/compra/compra/compra.component.html
@@ -1,1 +1,49 @@
-<p>compra works!</p>
+
+<div class="contenedorPrincipal">
+
+
+  <h1 class="titulo">Compras</h1>
+
+  <br>
+
+  <a href="" class="btn btn-success"><i class="fa-solid fa-cart-plus"></i> Comprar</a>
+  <br>
+  <br>
+  <div class="card">
+    <h3 class="card-header">Historial de compras</h3>
+    <br>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-3">
+          <b>Filtrar por: </b>
+          <input type="text" class="form-control" name="filtroRec">
+        </div>
+      </div>
+      <br>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>ID compra</th>
+            <th>Usuario</th>
+            <th>Materia prima</th>
+            <th>Cant. comprada</th>
+            <th>Fecha de compra</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          <tr>
+            <td>193</td>
+            <td>Dulce Padrón</td>
+            <td>Tela verde</td>
+            <td>45m</td>
+            <td>2023-07-12</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+
+
+
+</div>
