Se avanzo en el carrito de compras, en los modulos de usuarios, receta, productos y pedido

--- a/src/app/modulos/compra/compra/compra.component.html
+++ b/src/app/modulos/compra/compra/compra.component.html
@@ -6,7 +6,7 @@
 
   <br>
 
-  <a href="" class="btn btn-success"><i class="fa-solid fa-cart-plus"></i> Comprar</a>
+  <a href="" class="btn btn-success" routerLink="compraMateria"><i class="fa-solid fa-cart-plus"></i> Comprar</a>
   <br>
   <br>
   <div class="card">
