--- a/src/app/modulos/finanzas/finanzas/finanzas.component.html
+++ b/src/app/modulos/finanzas/finanzas/finanzas.component.html
@@ -1,5 +1,9 @@
 <mat-tab-group>
-  <mat-tab label="First"> Content 1 </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
+  <mat-tab label="Dashboard">
+
+  </mat-tab>
+  <mat-tab label="Proceso de ETL">
+
+  </mat-tab>
 </mat-tab-group>
 
