--- a/src/app/modulos/proveedor/proveedor/proveedor.component.html
+++ b/src/app/modulos/proveedor/proveedor/proveedor.component.html
@@ -31,7 +31,7 @@
             <th colspan="2">Acciones</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
           <tr>
             <td>1</td>
             <td>Textiles León</td>
