--- a/src/app/modulos/producto/producto/producto.component.css
+++ b/src/app/modulos/producto/producto/producto.component.css
@@ -1,3 +1,26 @@
 .contenedorPro{
   margin: 10px;
 }
+
+.btnCrear{
+  border-radius: 16px;
+  background-color: #6ea1ca;
+}
+
+.btnCrear:hover{
+  color: #6ea1ca;
+  background-color: white;
+  border: 1px solid #6ea1ca;
+  transition: all 0.60;
+}
+
+.btnAgregar{
+  border-radius: 16px;
+}
+
+.btnAgregar:hover{
+  color: rgb(255, 208, 0);
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid rgb(255, 208, 0);
+  transition: all 0.60;
+}
