--- a/src/app/modulos/producto/producto/producto.component.html
+++ b/src/app/modulos/producto/producto/producto.component.html
@@ -2,7 +2,10 @@
 
   <h1 style="text-align: center; font-size: 48px">Gestión de Productos</h1>
   <br>
-  <a class="btn btn-warning" style="border-radius: 16px;" routerLink="agregarProducto"><i class="fa-regular fa-square-plus"></i> Agregar producto</a>
+  <a class="btn btn-warning btnAgregar" routerLink="agregarProducto"><i class="fa-regular fa-square-plus"></i> Agregar producto</a>
+  <br>
+  <br>
+  <a class="btn btnCrear" routerLink="crearProducto"><i class="fa-solid fa-gears"></i> Crear productos</a>
   <br>
   <br>
   <div class="card">
@@ -23,7 +26,7 @@
             <th colspan="2">Acciones</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
           <tr>
             <td>1</td>
             <td>Cojin</td>
