--- a/src/app/modulos/receta/receta/receta.component.html
+++ b/src/app/modulos/receta/receta/receta.component.html
@@ -7,7 +7,7 @@
   <br>
   <br>
   <div class="card">
-    <h3 class="card-header" style="background-color: blue; color: white;">Recetas</h3>
+    <h3 class="card-header" style="background-color: #6ea1ca;">Recetas</h3>
     <div class="card-body">
       <div class="row">
         <div class="col-md-3">
@@ -26,7 +26,7 @@
             <th colspan="2">Acciones</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
           <tr>
             <td>1</td>
             <td>Tela</td>
