--- a/src/app/modulos/usuario/usuario/usuario.component.html
+++ b/src/app/modulos/usuario/usuario/usuario.component.html
@@ -1,1 +1,56 @@
-<p>usuario works!</p>
+
+<div class="contenedorPrincipal">
+
+
+  <h1 class="titulo">Gestión de usuarios</h1>
+
+  <br>
+
+  <a href="" class="btn btn-warning btnAgregar" routerLink="agregarUsuario"><i class="fa-solid fa-user-plus"></i> Nuevo usuario</a>
+  <br>
+  <br>
+  <div class="card">
+    <h3 class="card-header">Usuarios</h3>
+    <br>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-3">
+          <b>Filtrar por: </b>
+          <input type="text" class="form-control" name="filtroRec">
+        </div>
+      </div>
+      <br>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Contraseña</th>
+            <th>Fecha de creación</th>
+            <th>Rol</th>
+            <th colspan="2">Acciones</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          <tr>
+            <td>193</td>
+            <td>Dulce Padrón</td>
+            <td>dulce@gmail.com</td>
+            <td>398h9d</td>
+            <td>2023-07-12</td>
+            <td>Empleado</td>
+            <td>
+              <a class="btn btn-warning" routerLink="editarUsuario"><i class="fa-solid fa-pen"></i> Editar</a>
+            </td>
+            <td>
+              <button class="btn btn-danger"><i class="fa-solid fa-trash"></i> Eliminar</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
+
