--- a/src/app/modulos/venta/venta/venta.component.html
+++ b/src/app/modulos/venta/venta/venta.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="col-4">
-      <a href="#" style="font-size: 2.5rem; color: #6ea1ca; align-items: center;"><i class="fa-solid fa-cart-shopping" title="carrito"></i></a>
+      <a style="font-size: 2.5rem; color: #6ea1ca; align-items: center;" routerLink="carrito"><i class="fa-solid fa-cart-shopping" title="carrito"></i></a>
     </div>
   </div>
   <br>
