Se termino la parte de diseño de los modulos faltantes y ademas se agregaron los interfaces

--- a/src/app/modulos/inventario/inventario/inventario.component.html
+++ b/src/app/modulos/inventario/inventario/inventario.component.html
@@ -1,1 +1,43 @@
-<p>inventario works!</p>
+<div class="contenedorPrincipal">
+  <div class="card">
+
+    <h1 class="card-header">Inventario de Materia</h1>
+    <br>
+    <div class="card-body">
+
+
+      <table class="table table-striped table-hover">
+        <thead class="text-center">
+          <tr>
+            <th>ID de inventario</th>
+            <th>Materia prima</th>
+            <th>Cantidad almacenada</th>
+            <th colspan="2">Acciones</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          <tr>
+            <td>1</td>
+            <td>Hilo azul</td>
+            <td>15</td>
+            <td><button class="btn btn-warning" routerLink="editarInventario"> Editar</button></td>
+            <td><button type="button" class="btn btn-danger"><i class="fa-solid fa-trash"></i> Eliminar</button></td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Hilo rojo</td>
+            <td>15</td>
+            <td><button class="btn btn-warning" routerLink="editarInventario"> Editar</button></td>
+            <td><button type="button" class="btn btn-danger"><i class="fa-solid fa-trash"></i> Eliminar</button></td>
+          </tr>
+        </tbody>
+      </table>
+
+
+
+    </div>
+
+
+
+  </div>
+</div>
