--- a/src/app/modulos/venta/carrito/carrito.component.html
+++ b/src/app/modulos/venta/carrito/carrito.component.html
@@ -4,7 +4,7 @@
   <br>
   <br>
   <div class="card">
-    <h1 class="card-header">Compras</h1>
+    <h1 class="card-header">Carrito de Compras</h1>
     <br>
     <div class="card-body">
       <div class="tabla">
@@ -40,7 +40,7 @@
         </table>
       </div>
       <h1 class="total text-start">Total: $1800</h1>
-      <button class="btn btn-outline-success">Comprar</button>
+      <button class="btn btn-outline-success" routerLink="pago">Comprar</button>
 
     </div>
   </div>
