--- a/src/app/modulos/inventario/editar-inventario/editar-inventario.component.html
+++ b/src/app/modulos/inventario/editar-inventario/editar-inventario.component.html
@@ -1,1 +1,37 @@
-<p>editar-inventario works!</p>
+<div class="contenedorPrincipal">
+
+
+  <a class="btn btn-danger" routerLink="../" style="border-radius: 16px;"><i class="fa-solid fa-arrow-right fa-rotate-180"></i> Regresar</a>
+
+  <h1 class="titulo">Editar inventario</h1>
+
+  <br><br>
+
+  <div class="formularioInventario">
+    <form action="" class="row g-3">
+
+      <div class="col-4">
+        <label for="" class="form-label">ID: </label>
+        <input type="text" class="form-control" name="idInv" disabled>
+      </div>
+
+      <div class="col-4">
+        <label for="" class="form-label">Materia prima: </label>
+        <input type="text" class="form-control" name="matpr" disabled>
+      </div>
+
+      <div class="col-4">
+        <label for="" class="form-label">Cantidad: </label>
+        <input type="number" class="form-control" name="cant">
+      </div>
+
+      <div class="col-12">
+        <button class="btn btn-success" type="submit">Actualizar</button>
+      </div>
+
+
+    </form>
+  </div>
+
+
+</div>
