--- a/src/app/modulos/materia_prima/agregar-materia/agregar-materia.component.html
+++ b/src/app/modulos/materia_prima/agregar-materia/agregar-materia.component.html
@@ -1,1 +1,61 @@
-<p>agregar-materia works!</p>
+<div class="contenedorPrincipal">
+
+
+  <a class="btn btn-danger" routerLink="../" style="border-radius: 16px;"><i class="fa-solid fa-arrow-right fa-rotate-180"></i> Regresar</a>
+  <h1 class="titulo">Agregar materia prima</h1>
+
+  <br>
+  <br>
+
+  <div class="formularioMateria">
+
+
+    <form action="" class="row g-3">
+
+     <div class="col-4">
+        <label for="productoId" class="form-label">Proveedor: </label>
+        <select name="productoId" id="productoId" class="form-select" style="border-radius: 16px;">
+          <option selected disabled>Selecciona el proveedor</option>
+          <option value="id">Textiles Leon</option>
+          <option value="id">Cobija</option>
+        </select>
+     </div>
+
+      <div class="col-4">
+        <label for="nombre" class="form-label">Nombre: </label>
+        <input type="text" id="nombre" name="nombre" class="form-control" style="border-radius: 16px">
+      </div>
+
+      <div class="col-4">
+        <label for="materiaId" class="form-label">Unidad de medida: </label>
+        <select name="materiaId" id="materiaId" class="form-select" style="border-radius: 16px;">
+          <option selected disabled>Selecciona unidad de medida</option>
+          <option value="id">Piezas</option>
+          <option value="id">Metro</option>
+        </select>
+      </div>
+
+      <div class="col-4">
+        <label for="cantMin" class="form-label">Cantidad minima: </label>
+        <input type="number" id="cantMin" name="cantMin" class="form-control" style="border-radius: 16px;" min="1">
+      </div>
+
+      <div class="col-4">
+        <label for="precioC" class="form-label">Precio compra: </label>
+        <input type="number" id="precioC" name="precioC" class="form-control" style="border-radius: 16px;" min="1">
+      </div>
+
+      <div class="col-12">
+        <button class="btn btn-success" type="submit" id="botonGuardar"><i class="fa-solid fa-floppy-disk"></i> Guardar</button>
+      </div>
+
+
+    </form>
+
+  </div>
+
+
+
+
+</div>
+
