--- a/src/app/modulos/usuario/editar-usuario/editar-usuario.component.html
+++ b/src/app/modulos/usuario/editar-usuario/editar-usuario.component.html
@@ -14,7 +14,7 @@
 
       <div class="col-2">
         <label for="idUser" class="form-label">ID: </label>
-        <input type="text" id="idUser" name="idUser" class="form-control">
+        <input type="text" id="idUser" name="idUser" class="form-control" disabled>
      </div>
 
      <div class="col-4">
