--- a/src/app/modulos/venta/venta/venta.component.html
+++ b/src/app/modulos/venta/venta/venta.component.html
@@ -10,6 +10,7 @@
     </div>
     <div class="col-4">
       <a style="font-size: 2.5rem; color: #6ea1ca; align-items: center;" routerLink="carrito"><i class="fa-solid fa-cart-shopping" title="carrito"></i></a>
+      <span style="font-weight: bolder;">0</span>
     </div>
   </div>
   <br>
@@ -29,6 +30,12 @@
           <p class="card-text" style="color: rgb(95, 95, 95);">Cantidad disponible: <b>15</b></p>
           <div class="row row-cols-1 g-3">
             <button type="button" data-toggle="modal" data-target="#productoVer" class="btn col" style="border-radius: 16px; background-color: #6ea1ca;">Ver</button>
+            <div class="row cantidadPr">
+              <div class="col">Cantidad: </div>
+              <div class="col">
+                <input type="number" min="1" class="form-control" style="border-radius: 16px;" value="1">
+              </div>
+            </div>
             <a href="" class="btn btn-primary col" style="border-radius: 16px;"><i class="fa-solid fa-cart-plus"></i> Agregar a carrito</a>
           </div>
         </div>
